2008-06-11  Evan Monroig  <evan.monroig@gmail.com>

	* experimental/vector.lisp: try at separate vector type -> also
	lots of code duplication
	minor change

	* experimental/vector.lisp: added more necessary things for the
	case of vector type derived from matrix type -> ugly code
	duplication

	* matrix.lisp (mref, setf mref): minor change in documentation
	(window, strides, transpose): minor change in argument name

2008-06-08  Evan Monroig  <evan.monroig@gmail.com>

	* experimental/vector.lisp: just some 5-minute exploratory
	brainstorming at the vector interface

	* tests.lisp (ones, zeros, eye): new tests
	(axpy, dot, nrm2, asum, iamax, m+, m-): new tests

	* matrix.lisp (eye): added

	* lapack-methods.lisp (axpy, dot, dotu, dotc, nrm2, asum, iamax):
	added
	(scal): modified

	* matrix-operations.lisp (m+, m-): added

	* lapack-utils.lisp (def-lapack-method): modify NAME parameter to
	allow a list with the name and then keywords.
	(%get-functions, %get-name): helper functions to obtain the NAME
	and the cl-blapack function names to use for each matrix
	element-type
	(with-copies): when RESULT is NIL, don't return it but instead
	return the value of BODY

2008-06-07  Evan Monroig  <evan.monroig@gmail.com>

	* matrix-operations.lisp (m*): added

	* lapack-utils.lisp (translate-to-foreign): keep to minimal methods
	(with-pinned-arrays, with-pinned-copies, la-matrix->pointer):
	clean up a little

	* matrix-implementations.lisp (*type-table*, type-info)
	(add-type, def-lisp-matrix-type): rewritten type functions and
	type info table to also define a CFFI-TYPE
	(make-class-hierarchy): also create a method ELEMENT-TYPE-SIZE

	* matrix.lisp (offset): moved here from lapack-utils.lisp

	* lapack-methods.lisp (gemm): striped down, made closer to the
	fortran call

	* experimental/multiplication.lisp: replaced by some experimental
	code to call the fortran dgemm using CFFI types for which lisp
	arrays are converted inline (no generic functions) -- this would